force-app/main/default/objects/BET_BDD_AuthInfo__c/BET_BDD_AuthInfo__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>BET BDD salesforce authentication information and endpoint</description>
    <label>BET_BDD_AuthInfo</label>
</CustomObject>