force-app/main/default/objects/BET_BDD_AuthInfo__c/fields/client_Id__c.field-meta.xml
<CustomField>
    <fullName>client_Id__c</fullName>
    <description>salesforce connect app client ID</description>
    <label>client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>