force-app/main/default/objects/BET_BDD_AuthInfo__c/fields/endpointSF__c.field-meta.xml
<CustomField>
    <fullName>endpointSF__c</fullName>
    <label>endpointSF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>