force-app/main/default/objects/BET_BDD_AuthInfo__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>password and Security Token</description>
    <label>password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>